- cookware trader spawns near initial spawn location
- Soy milk changed to protein instead of dairy - MOSTLY DONE (check nutrition in foods/meals)
- Fruit bread/muffins nerfed; accept a max of 2 fruits instead of 5 (food items can't have more than 2 of any individual ingredient?)
- Removed honeycombs pressing into honey / pressed honeycomb being turnable into beeswax - DONE!!!

1.7.5
NEW FOOD ADDITIONS FINALLY???

- Acorns 1.20+ compatiblity added - DONE!!!

- Wildcraft stuff:
-- Wildcraft fruits updated
-- Wildcraft nut butter added (like peanut butter, but with other nuts)
On hiatus until Wildcraft Herbs & Spices is updated
-- added herbs to Dressing
-- mixed herbs added
-- herbal soft dough added
-- pomace wine no longer crashes

BALANCING: 
- Yogurt can be added to fruit bars in place of gelatin
- Salads and cold pasta allow cured sausage - DONE!!!
- Potent spirits do not cure into themselves anymore - DONE!!!
- Alcohol nutrition nerfed when in meals - DONE!!!
- Lard nutrition & healing nerfed; output doubled - DONE!!!

NEW FOOD:
- added meatloaf?
- added walnut/sunflower butter?
- Dehydrated yeast added (cook in cooking pot; grind result)

BUG FIXES:
- Wildcraft strong wine barrels into vinegar at the proper rate - DONE!!!
- Acorn muffins don't crash when topping with honey - DONE!!!

MISC: 
- Dialogue added to Kitchenware Trader; readjusted code to push text to en.json
- Candle recipes updated (waiting on More Candles)
- Food can be put on the ground, I guess?

- New 1.20 clays integrated
- Chef hat + saddle makes Chef Saddle
- Rolling pin tool rack transform fixed; now actually in the rack



1.7.4
- Wildcraft stuff:
-- Nuts working in fruit bread
-- Nuts working in muffins
-- Nuts working in trail mix
-- Nuts can be put into yogurt meals
-- Sumac and Juniper berries are NUTS now, I guess
-- Wildcraft Aged liquids disabled when Expanded Foods is installed 
-- Aged flower wine incorporated into EF