@@ -301,8 +301,6 @@
 			"redmeat": { "base": "game:block/food/meal/group6-spelt-onion-redcurrant-egg-redmeatstew" },
 			"poultry": { "base": "game:block/food/meal/group5-rye-turnip-blackcurrant-cheddarcheese-poultrystew" },
 			"bushmeat": { "base": "game:block/food/meal/group8-amaranth-pumpkin-bellpepper-bushmeatstew" },
-			"crab": { "base": "primitivesurvival:item/crab/crabmeat-raw" },
-			"snake": { "base": "primitivesurvival:item/crab/snakemeat-raw" },
 			"blueberry": { "base": "game:block/food/meal/group1-flax-carrot-blueberry-cottagecheese-fish" },
 			"blackcurrant": { "base": "game:block/food/meal/group5-rye-turnip-blackcurrant-cheddarcheese-poultrystew" },
 			"cranberry": { "base": "game:block/food/meal/group3-millet-bolete-cranberry-poultry" },
@@ -361,8 +359,6 @@
 			"redmeat": { "base": "game:block/food/meal/group6-spelt-onion-redcurrant-egg-redmeatstew" },
 			"poultry": { "base": "game:block/food/meal/group5-rye-turnip-blackcurrant-cheddarcheese-poultrystew" },
 			"bushmeat": { "base": "game:block/food/meal/group8-amaranth-pumpkin-bellpepper-bushmeatstew" },
-			"crab": { "base": "primitivesurvival:item/crab/crabmeat-raw" },
-			"snake": { "base": "primitivesurvival:item/crab/snakemeat-raw" },
 			"blueberry": { "base": "game:block/food/meal/group1-flax-carrot-blueberry-cottagecheese-fish" },
 			"blackcurrant": { "base": "game:block/food/meal/group5-rye-turnip-blackcurrant-cheddarcheese-poultrystew" },
 			"cranberry": { "base": "game:block/food/meal/group3-millet-bolete-cranberry-poultry" },
@@ -421,8 +417,6 @@
 			"redmeat": { "base": "game:block/food/meal/group6-spelt-onion-redcurrant-egg-redmeatstew" },
 			"poultry": { "base": "game:block/food/meal/group5-rye-turnip-blackcurrant-cheddarcheese-poultrystew" },
 			"bushmeat": { "base": "game:block/food/meal/group8-amaranth-pumpkin-bellpepper-bushmeatstew" },
-			"crab": { "base": "primitivesurvival:item/crab/crabmeat-raw" },
-			"snake": { "base": "primitivesurvival:item/crab/snakemeat-raw" },
 			"blueberry": { "base": "game:block/food/meal/group1-flax-carrot-blueberry-cottagecheese-fish" },
 			"blackcurrant": { "base": "game:block/food/meal/group5-rye-turnip-blackcurrant-cheddarcheese-poultrystew" },
 			"cranberry": { "base": "game:block/food/meal/group3-millet-bolete-cranberry-poultry" },
