@@ -3,89 +3,89 @@
     "op": "addmerge",
     "path": "/texturesByType/*-syruppartbaked",
     "value": {
-			"crabmeat": { "base": "primitivesurvival:item/crab/crabmeat-partbaked" },
-			"snakemeat": { "base": "primitivesurvival:item/snake/snakemeat-partbaked" }
+      "crab": { "base": "primitivesurvival:item/crab/crabmeat-partbaked" },
+      "snake": { "base": "primitivesurvival:item/snake/snakemeat-partbaked" }
     },
-    "file": "expandedfoods:itemtypes/acorns/mixing/acornstuffedpepper.json",
+    "file": "expandedfoods:itemtypes/food/mixing/stuffedpepper.json",
     "side": "server",
-    "dependsOn": [{ "modid": "primitivesurvival" }, { "modid": "acorns" }, { "modid": "acorns120", "invert": true }]
+    "dependsOn": [{ "modid": "primitivesurvival" }]
   },
   {
     "op": "addmerge",
     "path": "/texturesByType/*-syrupcooked",
     "value": {
-			"crabmeat": { "base": "primitivesurvival:item/crab/crabmeat-cooked" },
-			"snakemeat": { "base": "primitivesurvival:item/snake/snakemeat-cooked" }
+      "crab": { "base": "primitivesurvival:item/crab/crabmeat-cooked" },
+      "snake": { "base": "primitivesurvival:item/snake/snakemeat-cooked" }
     },
-    "file": "expandedfoods:itemtypes/acorns/mixing/acornstuffedpepper.json",
+    "file": "expandedfoods:itemtypes/food/mixing/stuffedpepper.json",
     "side": "server",
-    "dependsOn": [{ "modid": "primitivesurvival" }, { "modid": "acorns" }, { "modid": "acorns120", "invert": true }]
+    "dependsOn": [{ "modid": "primitivesurvival" }]
   },
   {
     "op": "addmerge",
     "path": "/texturesByType/*-syrupcharred",
     "value": {
-			"crabmeat": { "base": "primitivesurvival:item/crab/crabmeat-charred" },
-			"snakemeat": { "base": "primitivesurvival:item/snake/snakemeat-charred" }
+      "crab": { "base": "primitivesurvival:item/crab/crabmeat-charred" },
+      "snake": { "base": "primitivesurvival:item/snake/snakemeat-charred" }
     },
-    "file": "expandedfoods:itemtypes/acorns/mixing/acornstuffedpepper.json",
+    "file": "expandedfoods:itemtypes/food/mixing/stuffedpepper.json",
     "side": "server",
-    "dependsOn": [{ "modid": "primitivesurvival" }, { "modid": "acorns" }, { "modid": "acorns120", "invert": true }]
+    "dependsOn": [{ "modid": "primitivesurvival" }]
   },
   {
     "op": "addmerge",
     "path": "/texturesByType/*-partbaked",
     "value": {
-			"crabmeat": { "base": "primitivesurvival:item/crab/crabmeat-partbaked" },
-			"snakemeat": { "base": "primitivesurvival:item/snake/snakemeat-partbaked" }
+      "crab": { "base": "primitivesurvival:item/crab/crabmeat-partbaked" },
+      "snake": { "base": "primitivesurvival:item/snake/snakemeat-partbaked" }
     },
-    "file": "expandedfoods:itemtypes/acorns/mixing/acornstuffedpepper.json",
+    "file": "expandedfoods:itemtypes/food/mixing/stuffedpepper.json",
     "side": "server",
-    "dependsOn": [{ "modid": "primitivesurvival" }, { "modid": "acorns" }, { "modid": "acorns120", "invert": true }]
+    "dependsOn": [{ "modid": "primitivesurvival" }]
   },
   {
     "op": "addmerge",
     "path": "/texturesByType/*-cooked",
     "value": {
-			"crabmeat": { "base": "primitivesurvival:item/crab/crabmeat-cooked" },
-			"snakemeat": { "base": "primitivesurvival:item/snake/snakemeat-cooked" }
+      "crabm": { "base": "primitivesurvival:item/crab/crabmeat-cooked" },
+      "snake": { "base": "primitivesurvival:item/snake/snakemeat-cooked" }
     },
-    "file": "expandedfoods:itemtypes/acorns/mixing/acornstuffedpepper.json",
+    "file": "expandedfoods:itemtypes/food/mixing/stuffedpepper.json",
     "side": "server",
-    "dependsOn": [{ "modid": "primitivesurvival" }, { "modid": "acorns" }, { "modid": "acorns120", "invert": true }]
+    "dependsOn": [{ "modid": "primitivesurvival" }]
   },
   {
     "op": "addmerge",
     "path": "/texturesByType/*-charred",
     "value": {
-			"crabmeat": { "base": "primitivesurvival:item/crab/crabmeat-charred" },
-			"snakemeat": { "base": "primitivesurvival:item/snake/snakemeat-charred" }
+      "crab": { "base": "primitivesurvival:item/crab/crabmeat-charred" },
+      "snake": { "base": "primitivesurvival:item/snake/snakemeat-charred" }
     },
-    "file": "expandedfoods:itemtypes/acorns/mixing/acornstuffedpepper.json",
+    "file": "expandedfoods:itemtypes/food/mixing/stuffedpepper.json",
     "side": "server",
-    "dependsOn": [{ "modid": "primitivesurvival" }, { "modid": "acorns" }, { "modid": "acorns120", "invert": true }]
+    "dependsOn": [{ "modid": "primitivesurvival" }]
   },
   {
     "op": "addmerge",
     "path": "/texturesByType/*-oiled",
     "value": {
-			"crabmeat": { "base": "primitivesurvival:item/crab/crabmeat-raw" },
-			"snakemeat": { "base": "primitivesurvival:item/snake/snakemeat-raw" }
+      "crab": { "base": "primitivesurvival:item/crab/crabmeat-raw" },
+      "snake": { "base": "primitivesurvival:item/snake/snakemeat-raw" }
     },
-    "file": "expandedfoods:itemtypes/acorns/mixing/acornstuffedpepper.json",
+    "file": "expandedfoods:itemtypes/food/mixing/stuffedpepper.json",
     "side": "server",
-    "dependsOn": [{ "modid": "primitivesurvival" }, { "modid": "acorns" }, { "modid": "acorns120", "invert": true }]
+    "dependsOn": [{ "modid": "primitivesurvival" }]
   },
   {
     "op": "addmerge",
     "path": "/texturesByType/*-raw",
     "value": {
-			"crabmeat": { "base": "primitivesurvival:item/crab/crabmeat-raw" },
-			"snakemeat": { "base": "primitivesurvival:item/snake/snakemeat-raw" }
+      "crab": { "base": "primitivesurvival:item/crab/crabmeat-raw" },
+      "snake": { "base": "primitivesurvival:item/snake/snakemeat-raw" }
     },
-    "file": "expandedfoods:itemtypes/acorns/mixing/acornstuffedpepper.json",
+    "file": "expandedfoods:itemtypes/food/mixing/stuffedpepper.json",
     "side": "server",
-    "dependsOn": [{ "modid": "primitivesurvival" }, { "modid": "acorns" }, { "modid": "acorns120", "invert": true }]
+    "dependsOn": [{ "modid": "primitivesurvival" }]
   },
   {
     "op": "addmerge",
@@ -94,9 +94,9 @@
 			"crabmeat": { "base": "primitivesurvival:item/crab/crabmeat-partbaked" },
 			"snakemeat": { "base": "primitivesurvival:item/snake/snakemeat-partbaked" }
     },
-    "file": "expandedfoods:itemtypes/acorns/mixing/acornstuffedpepper.json",
+    "file": "expandedfoods:itemtypes/food/acorns/mixing/acornstuffedpepper.json",
     "side": "server",
-    "dependsOn": [{ "modid": "primitivesurvival" }, { "modid": "acorns120" }, { "modid": "acorns", "invert": true }]
+    "dependsOn": [{ "modid": "primitivesurvival" }, { "modid": "acorns" }]
   },
   {
     "op": "addmerge",
@@ -105,9 +105,9 @@
 			"crabmeat": { "base": "primitivesurvival:item/crab/crabmeat-cooked" },
 			"snakemeat": { "base": "primitivesurvival:item/snake/snakemeat-cooked" }
     },
-    "file": "expandedfoods:itemtypes/acorns/mixing/acornstuffedpepper.json",
+    "file": "expandedfoods:itemtypes/food/acorns/mixing/acornstuffedpepper.json",
     "side": "server",
-    "dependsOn": [{ "modid": "primitivesurvival" }, { "modid": "acorns120" }, { "modid": "acorns", "invert": true }]
+    "dependsOn": [{ "modid": "primitivesurvival" }, { "modid": "acorns" }]
   },
   {
     "op": "addmerge",
@@ -116,9 +116,9 @@
 			"crabmeat": { "base": "primitivesurvival:item/crab/crabmeat-charred" },
 			"snakemeat": { "base": "primitivesurvival:item/snake/snakemeat-charred" }
     },
-    "file": "expandedfoods:itemtypes/acorns/mixing/acornstuffedpepper.json",
+    "file": "expandedfoods:itemtypes/food/acorns/mixing/acornstuffedpepper.json",
     "side": "server",
-    "dependsOn": [{ "modid": "primitivesurvival" }, { "modid": "acorns120" }, { "modid": "acorns", "invert": true }]
+    "dependsOn": [{ "modid": "primitivesurvival" }, { "modid": "acorns" }]
   },
   {
     "op": "addmerge",
@@ -127,9 +127,9 @@
 			"crabmeat": { "base": "primitivesurvival:item/crab/crabmeat-partbaked" },
 			"snakemeat": { "base": "primitivesurvival:item/snake/snakemeat-partbaked" }
     },
-    "file": "expandedfoods:itemtypes/acorns/mixing/acornstuffedpepper.json",
+    "file": "expandedfoods:itemtypes/food/acorns/mixing/acornstuffedpepper.json",
     "side": "server",
-    "dependsOn": [{ "modid": "primitivesurvival" }, { "modid": "acorns120" }, { "modid": "acorns", "invert": true }]
+    "dependsOn": [{ "modid": "primitivesurvival" }, { "modid": "acorns" }]
   },
   {
     "op": "addmerge",
@@ -138,9 +138,9 @@
 			"crabmeat": { "base": "primitivesurvival:item/crab/crabmeat-cooked" },
 			"snakemeat": { "base": "primitivesurvival:item/snake/snakemeat-cooked" }
     },
-    "file": "expandedfoods:itemtypes/acorns/mixing/acornstuffedpepper.json",
+    "file": "expandedfoods:itemtypes/food/acorns/mixing/acornstuffedpepper.json",
     "side": "server",
-    "dependsOn": [{ "modid": "primitivesurvival" }, { "modid": "acorns120" }, { "modid": "acorns", "invert": true }]
+    "dependsOn": [{ "modid": "primitivesurvival" }, { "modid": "acorns" }]
   },
   {
     "op": "addmerge",
@@ -149,9 +149,9 @@
 			"crabmeat": { "base": "primitivesurvival:item/crab/crabmeat-charred" },
 			"snakemeat": { "base": "primitivesurvival:item/snake/snakemeat-charred" }
     },
-    "file": "expandedfoods:itemtypes/acorns/mixing/acornstuffedpepper.json",
+    "file": "expandedfoods:itemtypes/food/acorns/mixing/acornstuffedpepper.json",
     "side": "server",
-    "dependsOn": [{ "modid": "primitivesurvival" }, { "modid": "acorns120" }, { "modid": "acorns", "invert": true }]
+    "dependsOn": [{ "modid": "primitivesurvival" }, { "modid": "acorns" }]
   },
   {
     "op": "addmerge",
@@ -160,9 +160,9 @@
 			"crabmeat": { "base": "primitivesurvival:item/crab/crabmeat-raw" },
 			"snakemeat": { "base": "primitivesurvival:item/snake/snakemeat-raw" }
     },
-    "file": "expandedfoods:itemtypes/acorns/mixing/acornstuffedpepper.json",
+    "file": "expandedfoods:itemtypes/food/acorns/mixing/acornstuffedpepper.json",
     "side": "server",
-    "dependsOn": [{ "modid": "primitivesurvival" }, { "modid": "acorns120" }, { "modid": "acorns", "invert": true }]
+    "dependsOn": [{ "modid": "primitivesurvival" }, { "modid": "acorns" }]
   },
   {
     "op": "addmerge",
@@ -171,8 +171,8 @@
 			"crabmeat": { "base": "primitivesurvival:item/crab/crabmeat-raw" },
 			"snakemeat": { "base": "primitivesurvival:item/snake/snakemeat-raw" }
     },
-    "file": "expandedfoods:itemtypes/acorns/mixing/acornstuffedpepper.json",
+    "file": "expandedfoods:itemtypes/food/acorns/mixing/acornstuffedpepper.json",
     "side": "server",
-    "dependsOn": [{ "modid": "primitivesurvival" }, { "modid": "acorns120" }, { "modid": "acorns", "invert": true }]
+    "dependsOn": [{ "modid": "primitivesurvival" }, { "modid": "acorns" }]
   }
 ]
