@@ -2,9 +2,9 @@
 	"ingredientPattern": "P,B",
 	"ingredients": {
 		"P": { "type": "block", "code": "game:peatbrick" },
-		"B": { "type": "block", "code": "game:bowl-fired" }
+		"B": { "type": "block", "code": "game:bowl-*-fired", "name": "color" }
 	},
 	"width": 1,
 	"height": 2,
-	"output": { "type": "block", "code": "bowl-peat"  }
+	"output": { "type": "block", "code": "bowl-peat-{color}"  }
  }
