@@ -8,7 +8,7 @@
 	"textureSizes": {
 	},
 	"textures": {
-		"breadcrumbs": "fake:item/food/grain/crumbs/breadcrumbs"
+		"breadcrumbs": "item/food/grain/crumbs/breadcrumbs-rice"
 	},
 	"elements": [
 		{
