@@ -6,7 +6,7 @@
 	"textureWidth": 16,
 	"textureHeight": 16,
 	"textures": {
-		"pastaraw": "item/food/mammamia/mario/mario/luigi/mario"
+		"pastaraw": "item/food/dumpling/riceraw"
 	},
 	"elements": [
 		{
