@@ -6,7 +6,7 @@
 	"textureWidth": 16,
 	"textureHeight": 16,
 	"textures": {
-		"pastacooked": "item/food/mammamia/mario/mario/luigi/mario"
+		"pastacooked": "item/food/dumpling/ricecooked"
 	},
 	"elements": [
 		{
