@@ -6,7 +6,7 @@
 	"textureWidth": 8,
 	"textureHeight": 8,
 	"textures": {
-		"bread": "item/fake/grain/bread"
+		"bread": "game:item/food/grain/flaxbread"
 	},
 	"elements": [
 		{
