@@ -6,7 +6,7 @@
 	"textureWidth": 8,
 	"textureHeight": 8,
 	"textures": {
-		"dough": "item/food/fake/dough"
+		"dough": "game:item/food/grain/flaxbread"
 	},
 	"elements": [
 		{
