@@ -8,7 +8,7 @@
 	"textureSizes": {
 	},
 	"textures": {
-		"dough": "item/food/fakepath/unrealdough"
+		"dough": "item/food/dumpling/riceraw"
 	},
 	"elements": [
 		{
