@@ -8,7 +8,7 @@
 	"textureSizes": {
 	},
 	"textures": {
-		"bread": "item/food/fake/bread"
+		"bread": "game:item/food/grain/ricebread"
 	},
 	"elements": [
 		{
