@@ -8,7 +8,7 @@
 	"textureSizes": {
 	},
 	"textures": {
-		"ball": "item/fuck/it/we/ball"
+		"ball": "item/food/pemmican/pemmican-ball-redmeat"
 	},
 	"elements": [
 		{
