@@ -8,7 +8,7 @@
 	"textureSizes": {
 	},
 	"textures": {
-		"plain": "item/food/plain/jane"
+		"plain": "item/food/pemmican/pemmican-plain-redmeat"
 	},
 	"elements": [
 		{
