@@ -10,7 +10,7 @@
 		"sushiroll": [4,4]
 	},
 	"textures": {
-		"sushifilling": "item/food/sushi/sushifilling",
+		"sushifilling": "item/food/sushi/sushirice",
 		"sushiroll": "item/food/sushi/sushiroll"
 	},
 	"elements": [
