@@ -79,6 +79,7 @@ CHECK https://github.com/AreYSerious/VintageTranslation FOR TRANSLATIONS....
 - Soy milk changed to protein instead of dairy - MOSTLY DONE (check nutrition in foods/meals)
 - Fruit bread/muffins nerfed; accept a max of 2 fruits instead of 5 (food items can't have more than 2 of any individual ingredient?)
 - Removed honeycombs pressing into honey / pressed honeycomb being turnable into beeswax - DONE!!!
+- Bowl recipes updated (names and remapping later) - DONE!!!
 
 1.7.5
 NEW FOOD ADDITIONS FINALLY???
